<resources>
    <string name="app_name">sfera_1</string>
    <string name="page_title">ID 123 456 789</string>
    <string name="some_id">4.7</string>
    <string name="not_specified">Not specified</string>
    <string name="choose">Choose</string>
    <string name="languages">Russian, English, German</string>
    <string name="geoposition">New York City, USA</string>
    <string name="question">Questionnaires</string>
    <string name="people">People</string>
</resources>