<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/borderline"
        android:layout_width="0dp"
        android:layout_height="24dp"

        android:background="@color/black"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat

            android:id="@+id/linearLayoutCompat"
            android:layout_width="46dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/top_rectangle"


                />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/top_circle"
                 />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/top_reverse_triangle"

                android:pivotX="50"
                android:pivotY="50"
                android:rotation="180" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--hamburger-->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/hamburger"
        android:layout_width="18dp"
        android:layout_height="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/hamburger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--ID-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id"
        android:layout_width="125dp"
        android:layout_height="24dp"
        android:layout_marginStart="35dp"

        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/hamburger"
        app:layout_constraintTop_toBottomOf="@+id/borderline">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/page_title"
            android:textAppearance="@style/page_title"
            android:translationY="-1.11sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Share-->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/share"
        android:layout_width="18dp"
        android:layout_height="19.92dp"
        android:layout_marginTop="18.04dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/borderline">


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Profile Picture-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image"
        android:layout_width="160dp"

        android:layout_height="160dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/bear"
            app:civ_border="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/elevation"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/elevation"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView">

            <TextView
                android:id="@+id/some_id"
                style="@style/some_id"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"

                android:gravity="center|center_vertical|center_horizontal"
                android:text="@string/some_id"

                android:textSize="24sp"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Subtitle One name of the profile image-->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/profilename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"


        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Alice Peterson"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/inter"
            style="@style/some_id"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--globe-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/globe"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="18dp"
        android:background="@drawable/globe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilename"
        />
    <!--geoposition-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/geoposition"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/geoposition"

        android:layout_marginLeft="18dp"
        android:layout_marginTop="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/globe"/>
    <!--globe text -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/globe_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"


        app:layout_constraintLeft_toRightOf="@id/globe"

        app:layout_constraintTop_toBottomOf="@id/profilename">


        <TextView
            android:id="@+id/globetextview"
            style="@style/some_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/languages"
            android:textSize="14sp"
            android:fontFamily="@font/inter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/globe"
            app:layout_constraintTop_toBottomOf="@id/profilename"
            tools:ignore="NotSibling" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--geoposition text-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/geoposition_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="18dp"
        android:layout_marginTop="58dp"


        app:layout_constraintLeft_toRightOf="@id/globe"

        app:layout_constraintTop_toBottomOf="@id/profilename">


        <TextView
            android:id="@+id/globtextView"
            style="@style/some_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/geoposition"
            android:textSize="14sp"
            android:fontFamily="@font/inter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/geoposition"
            app:layout_constraintTop_toBottomOf="@id/geoposition"
            tools:ignore="NotSibling" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--choose 1-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choose1_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"


        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/profilename">


        <TextView
            android:id="@+id/chooselanguage"
            style="@style/some_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textSize="14sp"
            android:clickable="true"
            android:textColor="#9575CD"
            android:fontFamily="@font/inter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--choose2-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choose2_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="58dp"
        android:layout_marginRight="16dp"


        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/profilename">


        <TextView
            android:id="@+id/choosegeo"
            style="@style/some_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textSize="14sp"
            android:clickable="true"
            android:textColor="#9575CD"
            android:fontFamily="@font/inter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.constraintlayout.widget.ConstraintLayout>

